[project]
name = "rdfproxy-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at" }
]
dependencies = [
    "rdfproxy @ git+https://github.com/acdh-oeaw/rdfproxy",
    "fastapi[standard]>=0.112.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rdfproxy_test"]
